syntax="proto3";

package gostream.auth.v1;

// 1. Point to the NEW folder where generated code will sit (e.g., gen/go/auth)
// 2. Add ";authpb" to explicitly name the Go package "authpb" to avoid conflicts
option go_package="github.com/hunderaweke/gostream/gen/go/auth;authpb";

service AuthService{
    rpc Login(UserCredentials) returns (AuthorizedUser);
    rpc Validate(ValidateRequest)returns(ValidateResponse);
}

message User{
    string id = 1;
    string username = 2;
    string first_name = 3;
    string last_name = 4;
}

message UserCredentials{
    string username = 1;
    string password = 2; 
}

message TokenResponse{
    string access_token = 1;
    string refresh_token = 2;
}

message AuthorizedUser{
    TokenResponse token = 1;
    User user = 2;
}
message ValidateRequest {
    string token = 1;
}
message ValidateResponse {
    string user_id = 1;
}